<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/Margin_Single"
        android:paddingRight="@dimen/Margin_Single"
        android:paddingTop="@dimen/Margin_SingleHalf"
        android:paddingBottom="@dimen/Margin_SingleHalf">

        <ImageView
            android:id="@+id/list_item_shopping_cart_image"
            android:layout_width="@dimen/CartItem_Image"
            android:layout_height="@dimen/CartItem_Image"
            android:contentDescription="@string/shopping_cart_imageDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/Margin_Single"
            android:layout_marginStart="@dimen/Margin_Single"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/list_item_shopping_cart_itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Typeface.Medium.ListItem"/>

                <TextView
                    android:id="@+id/list_item_shopping_cart_itemPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="@dimen/Text_Large"
                    style="@style/Typeface.Normal.SkyBlueDark"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_cart_freeShipping"
                android:textSize="@dimen/Text_Small"
                android:textAllCaps="true"
                style="@style/Typeface.Normal.Dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margin_Half"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/shopping_cart_quantity"
                    android:textSize="@dimen/Text_Large"
                    style="@style/Typeface.Normal.Light"/>

                <Spinner
                    android:id="@+id/list_item_shopping_cart_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="@dimen/Margin_Single"
                    android:layout_marginStart="@dimen/Margin_Single"
                    android:spinnerMode="dropdown"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <ImageButton
                        android:id="@+id/list_item_shopping_cart_removeItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/select_background"
                        android:src="@drawable/icn_cart_trashcan_normal"
                        android:contentDescription="@string/shopping_cart_removeItemDescription"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View style="@style/Divider_Horizontal"/>

</LinearLayout>